# tg-bot-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py  bootstrap.py
app/agent/: __init__.py  loop.py
app/config/: settings.py
app/core/: __init__.py  logging.py  runtime.py  time_parser.py  types.py
app/llm/: router.py
app/memory/: __init__.py  base.py  in_memory.py  redis_store.py
app/repositories/: db.py  expense_repository.py  image_analysis_repository.py  models.py  task_repository.py  user_config_repository.py  web_screenshot_repository.py
app/services/: analytics_service.py  expense_service.py  image_analysis_service.py  task_service.py  user_config_service.py  weather_service.py  web_service.py
app/telegram/: __init__.py  formatting.py  gateway.py
app/tools/: __init__.py  definitions.py  expense_gateway.py  registry.py
app/tools/handlers/: analytics_handler.py  config_handler.py  expense_handler.py  image_handler.py  task_handler.py  weather_handler.py  web_handler.py
scripts/: init_db.py
